ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice__c/fields/EU_Inv_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>EU_Inv_Due_Date__c</fullName>
    <label>Inv Due Date</label>
    <type>Date</type>
</CustomField>