ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice__c/fields/EU_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>EU_Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>