ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice__c/fields/EU_Open_Invoice__c.field-meta.xml
<CustomField>
    <fullName>EU_Open_Invoice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Invoice Paid</label>
    <type>Checkbox</type>
</CustomField>