ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice__c/fields/EU_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>EU_Purchase_Order_Number__c</fullName>
    <label>Purchase Order Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>