ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice__c/fields/EU_Terms_Description__c.field-meta.xml
<CustomField>
    <fullName>EU_Terms_Description__c</fullName>
    <label>Terms Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>