ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice__c/fields/EU_Total_Amount_Due_Value__c.field-meta.xml
<CustomField>
    <fullName>EU_Total_Amount_Due_Value__c</fullName>
    <label>Total Amount Due Value</label>
    <summarizedField>EU_Open_Invoice_Line__c.EU_Amount_Due_Value__c</summarizedField>
    <summaryFilterItems>
        <field>EU_Open_Invoice_Line__c.EU_Open_Invoice_Line__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>EU_Open_Invoice_Line__c.EU_Open_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>