ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice__c/fields/EU_Total_Invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>EU_Total_Invoice_Value__c</fullName>
    <label>Total Invoice Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>